<resources>
    <string name="app_name">consume_api_github_repositories</string>
    <string name="title_repository">Title Repository</string>
    <string name="description">Description</string>
    <string name="username">Username</string>
    <string name="title_pull_request">Title Pull Request</string>
    <string name="body_pull_request">Body</string>
    <string name="error_to_load_repositories">Error to load Repositories</string>
    <string name="create_date">Create Date</string>
    <string name="this_repository_hasnt_pull_requests">This repository hasn\'t pull requests</string>
    <string name="bio">Bio</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
</resources>