<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewTitlePullRequest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20"
        android:maxLines="1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/title_pull_request" />

    <TextView
        android:id="@+id/textViewBodyPullRequest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginEnd="@dimen/margin_20"
        android:maxLines="3"
        app:layout_constraintTop_toBottomOf="@id/textViewTitlePullRequest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/body_pull_request" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewAvatarPullRequest"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintTop_toBottomOf="@id/textViewBodyPullRequest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/textViewUsernamePullRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_marginStart="@dimen/margin_5"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@id/imageViewAvatarPullRequest"
        app:layout_constraintTop_toBottomOf="@id/textViewBodyPullRequest"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/textViewCreateDatePullRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/create_date"/>

    <View
        android:id="@+id/viewDvisor"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_20"
        android:alpha="0.20"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>