<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewTitleRepositorie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_margin="@dimen/margin_20"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageViewAvatarRepositorie"
        tools:text="@string/title_repository" />

    <TextView
        android:id="@+id/textViewDescriptionRespositorie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginEnd="@dimen/margin_20"
        app:layout_constraintTop_toBottomOf="@id/textViewTitleRepositorie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageViewAvatarRepositorie"
        tools:text="@string/description"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewAvatarRepositorie"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_launcher_background"
        android:layout_margin="@dimen/margin_20"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewUsernameRepositorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginEnd="@dimen/margin_20"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/imageViewAvatarRepositorie"
        app:layout_constraintTop_toBottomOf="@id/imageViewAvatarRepositorie"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/username"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewDescriptionRespositorie"
        >

        <include
            android:id="@+id/includeFokStar"
            layout="@layout/fork_star"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/viewDvisor"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/black"
        android:alpha="0.20"
        android:layout_marginStart="@dimen/margin_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>